Canary Release Pattern/examples/kubernetes-argo-rollouts-dotnet/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-stable
  namespace: canary-demo
spec:
  selector:
    app: canary-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-canary
  namespace: canary-demo
spec:
  selector:
    app: canary-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
