Canary Release Pattern/examples/kubernetes-argo-rollouts-dotnet/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo
  namespace: canary-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: canary-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-demo-stable
                port:
                  number: 80
